<resources>
    <string name="app_name">Calculator_example</string>
    <string name="company_name">Company XYZ</string>
    <string name="logo_desc">Logo</string>
    <string name="buttonGo">Go</string>
    <string name="error">Error</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="eq">=</string>
    <string name="del">del</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="clr">CLR</string>
    <string name="dot">.</string>
</resources>
